added google oauth, still need to fix authentication

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,3 +1,4 @@
 <h1>On the motherfucking homepage.</h1>
 
 <%= link_to "Sign In", '/auth/instagram' %>
+<%= link_to "Google Sign In", '/auth/google_oauth2' %>
