--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
 <h1>Welcome <%= @user.name %></h1>
+<%= link_to "Google Sign In", '/auth/google_oauth2' %>
+<%= link_to "Sign Out", '/logout' %>
