updated view so that google link shows conditonally

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
 <h1>Welcome <%= @user.name %></h1>
-<%= link_to "Google Sign In", '/auth/google_oauth2' %>
+<% unless @current_user.identity %>
+  <%= link_to "Google Sign In", '/auth/google_oauth2' %>
+<%end%>
 <%= link_to "Sign Out", '/logout' %>
+<%= notice %>
