updated gemfile and modified menu

--- a/app/views/application/_loggedin.html.erb
+++ b/app/views/application/_loggedin.html.erb
@@ -2,6 +2,7 @@
   <nav class="android-navigation mdl-navigation">
     <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Styles</a>
     <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Blog</a>
+    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Videos</a>
     <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/logout">Sign Out</a>
   </nav>
 </div>
