--- a/app/views/application/_usermenu.html.erb
+++ b/app/views/application/_usermenu.html.erb
@@ -4,9 +4,9 @@
       <%= @user.name %>
   </span>
   <nav class="mdl-navigation">
-    <a class="mdl-navigation__link" href="">My Appointments</a>
+    <a class="mdl-navigation__link" href="">Make Appointments</a>
+    <a class="mdl-navigation__link" href="">Past Appointments</a>
     <a class="mdl-navigation__link" href="">My Styles</a>
-    <a class="mdl-navigation__link" href="">Wear</a>
     <a class="mdl-navigation__link" href="">TV</a>
     <a class="mdl-navigation__link" href="">Auto</a>
     <a class="mdl-navigation__link" href="">One</a>
