added routes, models, and controllers for blog, videos, and styles

--- a/app/views/application/_loggedin.html.erb
+++ b/app/views/application/_loggedin.html.erb
@@ -1,8 +1,8 @@
 <div class="android-navigation-container">
   <nav class="android-navigation mdl-navigation">
-    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Styles</a>
-    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Blog</a>
-    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Videos</a>
+    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/styles">Styles</a>
+    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/posts">Blog</a>
+    <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/videos">Videos</a>
     <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/logout">Sign Out</a>
   </nav>
 </div>
