--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @appointment, url: user_appointments_path do |f| %>
+<%= form_for @appointment, url: user_appointments_path(@user) do |f| %>
   <%= f.label :start_time, alt: 'Begin time' %>:
   <%= f.date_field :start_time %><br />
 
