--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,9 @@
       <div class="android-content mdl-layout__content">
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center">
-
+          <div class="background">
+            <img src="<%= asset_path('background.jpg') %>" alt="Models with various hairstyles" />
+          </div>
           <%= yield %>
 
           <!-- Begin Removing -->
