structure with html and positioning with css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,380 @@
  *= require_self
  *= require_tree .
 */
+/*
+
+    ======================================================================
+
+    CSS Reset
+
+    ======================================================================
+*/
+
+/* http://meyerweb.com/eric/tools/css/reset/
+     v2.0 | 20110126
+     License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+/*
+
+    ======================================================================
+
+    Grid
+
+    ======================================================================
+*/
+
+*,
+* :before,
+* :after {
+
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
+}
+
+.container {
+
+    margin: 0 auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 960px;
+
+}
+
+/*
+
+    ======================================================================
+
+    Typography
+
+    ======================================================================
+*/
+
+h1, h3, h4, h5, p {
+    margin-bottom: 22px;
+}
+
+/*
+
+======================================================================
+
+Home
+
+======================================================================
+*/
+
+.headline {
+padding: 22px 80px 66px 80px;
+}
+
+/*
+
+    ======================================================================
+
+    Clearfix
+
+    ======================================================================
+*/
+
+.group:before,
+.group:after {
+    content: "";
+    display: table;
+}
+
+.group:after {
+    clear: both;
+}
+
+.group {
+    clear: both;
+    *zoom: 1;
+}
+
+/*
+
+    ======================================================================
+
+    Primary header
+
+    ======================================================================
+*/
+
+.logo {
+    padding: 40px 0 22px 0;
+    float: left;
+}
+
+/*
+
+    ======================================================================
+
+    Primary footer
+
+    ======================================================================
+*/
+
+.primary-footer {
+    padding-bottom: 4px;
+    padding-top: 44px;
+}
+
+.primary-footer small {
+    float: left;
+}
+
+/*
+
+    ======================================================================
+
+    Columns
+
+    ======================================================================
+*/
+
+.col-1-3 {
+    width: 33.33%;
+}
+
+.col-2-3 {
+    width: 66.66%;
+}
+
+.col-1-3,
+.col-2-3 {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.container,
+.grid {
+    margin: 0 auto;
+    width: 960px;
+}
+
+.container {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+/*
+
+    ======================================================================
+
+    Navigation
+
+    ======================================================================
+*/
+
+.nav {
+    text-align: right;
+}
+
+.nav li {
+    display: inline-block;
+    margin: 0 10px;
+    vertical-align: top;
+}
+
+.nav li:last-child {
+    margin-right: 0;
+}
+
+/*
+
+    ======================================================================
+
+    Custom styles
+
+    ======================================================================
+*/
+
+body {
+    background: #38f040;
+    color: #000;
+    font: ;
+}
+
+h1, h2, h3, h4 {
+    color: #fff;
+}
+
+h1 {
+    font-size: 36px;
+    line-height: 44px;
+}
+
+h2 {
+    font-size: 24px;
+    line-height: 44px;
+}
+
+h3 {
+    font-size: 21px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+h5 {
+    color: #a9b2b9;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+strong {
+    font-weight: 400;
+}
+
+cite, em {
+    font-style: italic;
+}
+
+.logo {
+    float: left;
+    font-weight: 100;
+    letter-spacing: .5px;
+    line-height: 44px;
+    padding: 40px 0 22px 0;
+    text-transform: uppercase;
+}
+
+.tagline {
+    margin: 66px 0 22px 0;
+    text-align: right;
+}
+
+.primary-nav {
+    margin-top: 90px;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: .5px;
+    text-transform: capitalize;;
+}
+
+.primary-footer {
+    color: #4309e0;
+    font-size: 14px;
+    padding-bottom: 44px;
+    padding-top: 44px;
+}
+
+.primary-footer small {
+    float: left;
+    font-weight: 400;
+}
+
+.headline {
+    color: black;
+    line-height: 44px;
+    padding: 22px 80px 66px 80px;
+    text-align: center;
+}
+
+.headline h2 {
+    font-size: 36px;
+}
+
+.headline p {
+    font-size: 24px;
+    font-weight: 100;
+}
+
+.teaser a:hover h3 {
+    color: #a9b2b9;
+}
+
+.teaser img {
+    border-radius: 5px;
+    display: block;
+    margin-bottom: 22px;
+    max-width: 100%;
+}
+
+/*
+
+    ======================================================================
+
+    Links
+
+    ======================================================================
+*/
+
+a {
+    color: #648880;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #a9b2b9;
+}
+
+p a {
+    border-bottom: 1px solid #dfe2e5;
+}
+
+.primary-header a,
+.primary-footer a {
+    color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover {
+    color: #648880;
+}
