--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -2,12 +2,12 @@
     <h2>Some Text</h2>
   </section>
 
-  <section class="row">
-    <h2>Recent Videos</h2>
-  </section>
+  <div id="wrapper">
+    <section class="row">
+      <h2>Recent Videos</h2>
+    </section>
+  </div>
 
   <section class="row">
     <h2>RecentPosts</h2>
   </section>
-
-  
