--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -354,6 +354,13 @@ cite, em {
     max-width: 100%;
 }
 
+#wrapper
+{
+	position: relative;
+	padding: 5em 0em 7em 0em;
+	background: #FFF;
+}
+
 /*
 
     ======================================================================
